assets/sass/_core.scss
/* ... */
body.subpage .section-curriculum {
	background: $blue;
	color: #FFF;
	.hd2 {
		color: #FFF;
		padding-bottom: 20px;
		border-bottom: 1px solid #FFF;
	}
	.wrapper {
		padding-top: 40px;
		padding-bottom: 50px;
		@include tab {
			padding-top: 30px;
			padding-bottom: 40px;
		}
		@include desk {
			padding-top: 50px;
			padding-bottom: 10px;
		}
	}
	.director-message {
		position: relative;
		margin-top: -15px;
		padding-bottom: 20px;
	}
	.textcol {
		width: 100%;
		text-align: center;
		font-size: 1.2em;
		font-weight: 600;
		font-style: italic;
		@include flexgroup();
		@include flexbox-align-items(center);
		@include tab {
			font-size: 2vw;
			text-align: left;
			padding-top: 20px;
		}
		@include desk {
			padding-top: 0;
			font-size: 1.2em;
		}
		p {
			margin-top: 0;
		}
		p:last-child {
			margin-bottom: 0;
		}
	}
	.imagecol {
		width: 70%;
		float: none;
		margin: 0 auto;
		@include tab {
			float: left;
		}
		.frame {
			width: 100%;
			float: left;
			padding: 30px;
			position: relative;
		}
		.photo {
			width: 100%;
			float: left;
			position: relative;
			overflow: hidden;
			background-size: cover;
			background-position: center;
			background-repeat: no-repeat;
			border: 15px solid $blue;
			z-index: 10;
		}
		img {
			width: 100%;
			height: auto;
			float: left;
			border: 5px solid #FFF;
		}
		.hlines {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			overflow: hidden;
			border-radius: 100%;
			div {
				display: block;
				width: 100%;
				height: 100%;
				position: absolute;
				top: 0;
				left: 0;
				background-image: linear-gradient(0deg, #ffffff 11.54%, #4099cd 11.54%, #4099cd 50%, #ffffff 50%, #ffffff 61.54%, #4099cd 61.54%, #4099cd 100%);
				background-size: 26.00px 26.00px;
				border-radius: 100%;
				border: 5px solid $blue;
			}
			&:before, &:after {
				content:"";
				display: block;
				width: 110%;
				height: 22%;
				position: absolute;
				left: 0;
				z-index: 2;
				background: $blue;
			}
			&:before {
				top: 0;
			}
			&:after {
				bottom: 0;
			}
		}
	}
	.imagecol .photo,
	.imagecol .photo img {
		border-radius: 100%;
	}
	
	.flexrow.hasimage {
		.imagecol {
			@include tab {
				width: 30%;
			}
		}
		.textcol {
			width: 100%;
			@include tab {
				width: 70%;
				padding-left: 30px;
			}
		}
	}
	.author {
		font-style: normal;
		font-weight: 400;
		font-size: 0.85em;
	}
}

body.subpage .section-schedules {
	position: relative;
	overflow: hidden;
	@include tab {
		&:before {
			content:"";
			display: block;
			width: 30%;
			height: 110%;
			background: $limegreen;
			position: absolute;
			top: 0;
			left: 0;
		}
	}
	.flexrow {
		position: relative;
		z-index: 5;
	}
	.hd2 {
		margin: 0 0;
		line-height: 1.2;
		display: block;
		width: 100%;
		font-size: 1.6em;
		text-align: center;
		@include tab {
			padding: 10px 20px;
			font-size: 3vw;
			text-align: right;
		}
		@include mid {
			padding: 20px 35px;
		}
		@include desk {
			font-size: 2em;
		}
		span {
			padding: 20px 30px;
			display: inline-block;
			border: 1px solid $limegreen;
			background: #FFF;
			text-align: center;
			@include tab {
				text-align: left;
			}
			@include mid {
				max-width: 500px;
				width: 100%;
			}
		}
	}
	.titlecol, .textcol {
		width: 100%;
		position: relative;
	}
	.titlecol {
		padding: 40px 30px;
		background: $limegreen;
		@include tab {
			background: transparent;
			padding: 0 0;
			@include flexgroup();
			@include flexbox-align-items(center);
			@include flexbox-direction(row-reverse);
		}
	}
	.textcol {
		padding-top: 40px;
		padding-bottom: 50px;
		.tblwrap {
			position: relative;
			padding: 0 30px;
			@include tab {
				padding: 0 0;
			}
		}
	}
	.twocol {
		.titlecol {
			width: 100%;
			@include tab {
				width: 39.5%;
				margin-bottom: 0;
			}
		}
		.textcol {
			width: 100%;
			@include tab {
				width: 60%;
				padding-left: 40px;
				padding-right: 40px;
			}
			@include desk {
				padding-left: 5%;
				padding-right: 5%;
			}
		}
	}

	.table-schedules {
		width: 100%;
		border: none;
		font-size: 15px;
		td {
			position: relative;
			padding: 8px 0;
			vertical-align: top;
		}
		td.time {
			padding-right: 6px;
			.wrap {
				position: relative;
				&:after {
					content:"";
					display: block;
					width: 100%;
					height: 1px;
					background: $navyblue;
					position: absolute;
					bottom: 8px;
					left: 0;
				}
			}
			span {
				font-weight: 600;
				display: inline-block;
				position: relative;
				background: #FFF;
				z-index: 5;
				padding-right: 10px;
			}
		}
	}

	.table-schedules td.time {
		width: 40%;
		@include mid {
			width: 30%;
		}
	}

	.table-schedules td.scheduled-item {
		width: 60%;
		@include mid {
			width: 70%;
		}
	}

	.flexrow.onecol {
		background: #FFF;
		padding: 0 30px;
		@include mid {
			padding: 0 10%;
		}
		.tblwrap {
			max-width: 900px;
			width: 100%;
			margin: 0 auto;
			padding-top: 10px;
			padding-bottom: 10px;
			padding-left: 0;
			padding-right: 0;
			@include mid {
				padding-top: 30px;
				padding-bottom: 30px;
			}
		}
		.table-schedules td {
			@include mid {
				width: 50%;
			}
		}
		.table-schedules td.time span {
			background: #FFF;
		}
	}
}
.jconfirm .jconfirm-box .jconfirm-buttons {
	.btn.btn-blue {
		transition: all ease-out .3s;
		background-color: $navyblue;
		border: 1px solid $navyblue;
		color: #FFF;
		padding: 10px 25px;
		letter-spacing: 1px;
		&:hover {
			color: $navyblue;
			background-color: $brightgreen;
			border: 1px solid $limegreen;
			// box-shadow: 0 0 5px rgba(0,0,0,0.35);
		}
	}
}
.jconfirm.jconfirm-modern .jconfirm-box {
	border-top: 10px solid $limegreen;
}
.jconfirm.jconfirm-modern .jconfirm-box div.jconfirm-closeIcon {
	color: #000;
	opacity: 1;
}
.jconfirm .jconfirm-box div.jconfirm-closeIcon {
	font-size: 30px!important;
}
.jconfirm.jconfirm-modern .jconfirm-bg {
	background-color: rgba(0,0,0,.45);
	opacity: 1;
}
.jconfirm.jconfirm-modern .jconfirm-box div.jconfirm-content {
	margin-bottom: 0;
}
/* ... */

